--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "Wandering",
+  "name": "wandering-cli-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "bin": {
+    "wandering-cli-service": "bin/index.js"
+  },
+  "main": "lib/Service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "7.7.7",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "@babel/plugin-proposal-decorators": "7.7.4",
+    "@babel/plugin-proposal-export-default-from": "7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "7.7.5",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/plugin-transform-classes": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "7.7.5",
+    "@babel/plugin-transform-react-jsx": "7.7.7",
+    "@babel/plugin-transform-runtime": "7.7.6",
+    "@babel/polyfill": "7.7.0",
+    "@babel/preset-env": "7.7.7",
+    "@babel/runtime": "^7.7.7",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
     "@soda/friendly-errors-webpack-plugin": "^1.7.1",
     "@vue/preload-webpack-plugin": "^1.1.1",
+    "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "^3.0.0",
     "debug": "^4.1.1",
@@ -23,6 +42,7 @@
     "sass": "^1.23.7",
     "string.prototype.padstart": "^3.1.0",
     "terser-webpack-plugin": "^2.3.1",
+    "thread-loader": "^2.1.3",
     "webpack": "^4.41.4"
   },
   "publishConfig": {
