--- a/package.json
+++ b/package.json
@@ -14,42 +14,58 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "7.7.7",
-    "@babel/helper-module-imports": "^7.7.4",
+    "@babel/helper-module-imports": "7.7.4",
     "@babel/plugin-proposal-class-properties": "7.7.4",
     "@babel/plugin-proposal-decorators": "7.7.4",
     "@babel/plugin-proposal-export-default-from": "7.7.4",
     "@babel/plugin-proposal-export-namespace-from": "7.7.4",
     "@babel/plugin-proposal-optional-chaining": "7.7.5",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
-    "@babel/plugin-transform-classes": "^7.7.4",
+    "@babel/plugin-transform-classes": "7.7.4",
     "@babel/plugin-transform-modules-commonjs": "7.7.5",
     "@babel/plugin-transform-react-jsx": "7.7.7",
     "@babel/plugin-transform-runtime": "7.7.6",
     "@babel/polyfill": "7.7.0",
     "@babel/preset-env": "7.7.7",
-    "@babel/runtime": "^7.7.7",
-    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
-    "@soda/friendly-errors-webpack-plugin": "^1.7.1",
-    "@vue/preload-webpack-plugin": "^1.1.1",
-    "babel-loader": "^8.0.6",
-    "cache-loader": "^4.1.0",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chalk": "^3.0.0",
-    "debug": "^4.1.1",
-    "fibers": "^4.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash.defaultsdeep": "^4.6.1",
-    "read-pkg": "^5.2.0",
-    "sass": "^1.23.7",
-    "string.prototype.padstart": "^3.1.0",
-    "terser-webpack-plugin": "^2.3.1",
-    "thread-loader": "^2.1.3",
-    "webpack": "^4.41.4"
+    "@babel/runtime": "7.7.7",
+    "@intervolga/optimize-cssnano-plugin": "1.0.6",
+    "@soda/friendly-errors-webpack-plugin": "1.7.1",
+    "@vue/preload-webpack-plugin": "1.1.1",
+    "address": "1.1.2",
+    "babel-loader": "8.0.6",
+    "babel-merge": "3.0.0",
+    "cache-loader": "4.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chalk": "3.0.0",
+    "debug": "4.1.1",
+    "fibers": "4.0.2",
+    "html-webpack-plugin": "3.2.0",
+    "killable": "1.0.1",
+    "koa": "2.11.0",
+    "lodash.defaultsdeep": "4.6.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "read-pkg": "5.2.0",
+    "sass": "1.23.7",
+    "sockjs": "0.3.19",
+    "string.prototype.padend": "3.1.0",
+    "string.prototype.padstart": "3.1.0",
+    "terser-webpack-plugin": "2.3.1",
+    "thread-loader": "2.1.3",
+    "vue": "2.6.11",
+    "webpack": "4.41.4",
+    "webpack-dev-middleware": "3.7.2",
+    "webpack-dev-server": "3.10.1",
+    "webpack-hot-middleware": "2.25.0",
+    "ws": "7.2.1"
   },
   "publishConfig": {
     "access": "public"
   },
   "engines": {
     "node": ">=8"
+  },
+  "devDependencies": {
+    "preact": "10.1.1"
   }
 }
