--- a/package.json
+++ b/package.json
@@ -43,21 +43,24 @@
     "killable": "1.0.1",
     "koa": "2.11.0",
     "lodash.defaultsdeep": "4.6.1",
+    "preact": "10.1.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "read-pkg": "5.2.0",
     "sass": "1.23.7",
-    "sockjs": "0.3.19",
     "string.prototype.padend": "3.1.0",
     "string.prototype.padstart": "3.1.0",
     "terser-webpack-plugin": "2.3.1",
     "thread-loader": "2.1.3",
     "vue": "2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.2",
+    "vuex-router-sync": "^5.0.0",
     "webpack": "4.41.4",
     "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "3.10.1",
-    "webpack-hot-middleware": "2.25.0",
-    "ws": "7.2.1"
+    "webpack-hot-middleware": "2.25.0"
   },
   "publishConfig": {
     "access": "public"
@@ -65,7 +68,5 @@
   "engines": {
     "node": ">=8"
   },
-  "devDependencies": {
-    "preact": "10.1.1"
-  }
+  "devDependencies": {}
 }
