--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "chalk": "3.0.0",
     "debug": "4.1.1",
     "fibers": "4.0.2",
+    "fs-extra": "^8.1.0",
     "html-webpack-plugin": "3.2.0",
     "killable": "1.0.1",
     "koa": "2.11.0",
     "lodash.defaultsdeep": "4.6.1",
+    "lodash.template": "^4.5.0",
+    "nunjucks": "^3.2.0",
     "preact": "10.1.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
