--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "lib/Service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack:debug": "node --inspect-brk ./node_modules/webpack/bin/webpack.js --inline --progress"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "@soda/friendly-errors-webpack-plugin": "1.7.1",
     "@vue/preload-webpack-plugin": "1.1.1",
     "address": "1.1.2",
+    "app-root-path": "^3.0.0",
     "babel-loader": "8.0.6",
     "babel-merge": "3.0.0",
     "cache-loader": "4.1.0",
@@ -39,13 +41,15 @@
     "chalk": "3.0.0",
     "debug": "4.1.1",
     "fibers": "4.0.2",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "8.1.0",
     "html-webpack-plugin": "3.2.0",
+    "is-absolute": "^1.0.0",
     "killable": "1.0.1",
     "koa": "2.11.0",
     "lodash.defaultsdeep": "4.6.1",
-    "lodash.template": "^4.5.0",
-    "nunjucks": "^3.2.0",
+    "lodash.template": "4.5.0",
+    "lodash.uniq": "4.5.0",
+    "nunjucks": "3.2.0",
     "preact": "10.1.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -56,11 +60,11 @@
     "terser-webpack-plugin": "2.3.1",
     "thread-loader": "2.1.3",
     "vue": "2.6.11",
-    "vue-loader": "^15.8.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuex": "^3.1.2",
-    "vuex-router-sync": "^5.0.0",
+    "vue-loader": "15.8.3",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.6.11",
+    "vuex": "3.1.2",
+    "vuex-router-sync": "5.0.0",
     "webpack": "4.41.4",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0"
