--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "cache-loader": "4.1.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "debug": "4.1.1",
     "fibers": "4.0.2",
     "fs-extra": "8.1.0",
-    "html-webpack-plugin": "3.2.0",
     "is-absolute": "^1.0.0",
     "killable": "1.0.1",
     "koa": "2.11.0",
@@ -67,7 +67,8 @@
     "vuex-router-sync": "5.0.0",
     "webpack": "4.41.4",
     "webpack-dev-middleware": "3.7.2",
-    "webpack-hot-middleware": "2.25.0"
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-stats-plugin": "^0.3.1"
   },
   "publishConfig": {
     "access": "public"
@@ -75,5 +76,7 @@
   "engines": {
     "node": ">=8"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "html-webpack-plugin": "^4.0.0-beta.11"
+  }
 }
